--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && mkdir -p dist/config && cp src/config/config.js dist/config/config.js",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev:server": "nodemon src/server.ts",
+    "dev:client": "npm run dev --prefix client",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
@@ -51,6 +53,7 @@
     "prettier": "^3.7.4",
     "sequelize-cli": "^6.6.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "concurrently": "^8.2.2"
   }
 }
