feat: Implement shipping and delivery management with Shiprocket integration, including new routes, services, migrations, and UI updates.

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ CLOUDINARY_API_KEY=555238639222947
 CLOUDINARY_API_SECRET=Ha5_jGQKL_YUkPyPHQg2zH0gtow
 RAZORPAY_KEY_ID=rzp_test_RxmUbc8DygQpZ9
 RAZORPAY_KEY_SECRET=2mQ3bTgnaNMZFSRSx4GfATHG
+SHIPROCKET_EMAIL=joeeld007007@gmail.com
+SHIPROCKET_PASSWORD=F5%2qUQszYT1i$JXxavyoJ$J3QO!Tb^L
