--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && mkdir -p dist/config && cp src/config/config.js dist/config/config.js",
+    "build": "npm run build:server && npm run build:client && mkdir -p dist/public && cp -r client/dist/* dist/public/",
+    "build:server": "tsc && mkdir -p dist/config && cp src/config/config.js dist/config/config.js",
+    "build:client": "npm run build --prefix client",
     "start": "node dist/server.js",
     "dev:server": "nodemon src/server.ts",
     "dev:client": "npm run dev --prefix client",
@@ -16,6 +18,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^25.0.3",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
@@ -33,19 +46,9 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/helmet": "^0.0.48",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
-    "axios": "^1.13.2",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -53,7 +56,6 @@
     "prettier": "^3.7.4",
     "sequelize-cli": "^6.6.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "concurrently": "^8.2.2"
+    "typescript": "^5.9.3"
   }
 }
