--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:server && npm run build:client && mkdir -p dist/public && cp -r client/dist/* dist/public/",
+    "build": "npm run build:server && npm install --prefix client && npm run build:client && mkdir -p dist/public && cp -r client/dist/* dist/public/",
     "build:server": "tsc && mkdir -p dist/config && cp src/config/config.js dist/config/config.js",
     "build:client": "npm run build --prefix client",
     "start": "node dist/server.js",
