feat: Implement image cropping functionality and update build assets.

--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ RAZORPAY_KEY_ID=rzp_test_RxmUbc8DygQpZ9
 RAZORPAY_KEY_SECRET=2mQ3bTgnaNMZFSRSx4GfATHG
 SHIPROCKET_EMAIL=joeeld007007@gmail.com
 SHIPROCKET_PASSWORD=F5%2qUQszYT1i$JXxavyoJ$J3QO!Tb^L
+JWT_SECRET=ahdfpiaurgniaughpoaunblsuhgiuserhgah2198a4ga19e8rgae4
 DB_PORT=3306
